# yt-transcript

./: README.md  pyproject.toml
src/yt_transcript/: cli.py
src/yt_transcript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
