[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript"
version = "0.1.0"
description = "Fetch YouTube transcripts and clean them up with Claude"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0",
    "anthropic>=0.40.0",
]

[project.scripts]
yt-transcript = "yt_transcript.cli:main"
